--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "5.2.1",
+    "sharp": "^0.34.5",
     "tailwindcss": "3.4.14"
   },
   "devDependencies": {
