--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tailwindcss": "3.4.14"
   },
   "devDependencies": {
+    "critters": "^0.0.23",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.12"
   }
